--- a/clutch.opam
+++ b/clutch.opam
@@ -19,5 +19,5 @@ depends: [
   "coq-iris" { (= "4.0.0") | (= "dev") }
   "coq-stdpp" { (= "1.8.0") | (= "dev") }
   "coq-autosubst" { (= "dev") }
-  "coq-mathcomp-solvable"
+  "coq-mathcomp-solvable" { (= "1.17.0") }
 ]
