--- a/clutch.opam
+++ b/clutch.opam
@@ -15,7 +15,7 @@ build: [make "-j%{jobs}%"]
 install: []
 depends: [
   "coq" { (>= "8.15" & < "8.17~") | (= "dev") }
-  "coq-coquelicot" { (= "3.2.0") }
+  "coq-coquelicot" { (>= "3.2.0" & <= "3.4.0") }
   "coq-iris" { (= "4.0.0") | (= "dev") }
   "coq-stdpp" { (= "1.8.0") | (= "dev") }
   "coq-autosubst" { (= "dev") }
