--- a/clutch.opam
+++ b/clutch.opam
@@ -20,4 +20,5 @@ depends: [
   "coq-stdpp" { (= "1.8.0") | (= "dev") }
   "coq-autosubst" { (>= "1.8") | (= "dev") }
   "coq-mathcomp-solvable" { (= "1.17.0") }
+  "coq-mathcomp-analysis" { (= "0.6.4") }
 ]
