--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - '**'
 
 jobs:
   build:
@@ -13,29 +15,28 @@ jobs:
       matrix:
         coq_version:
           - '8.17.1'
+        ocaml_version:
+          - '4.14.1-flambda'
       max-parallel: 4
       # don't cancel all in-progress jobs if one matrix job fails:
       fail-fast: false
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
-      with:
-        submodules: true
-    - uses: coq-community/docker-coq-action@v1
-      with:
-        coq_version: ${{ matrix.coq_version }}
-        ocaml_version: "4.14.1-flambda"
-        install: ""
-        before_script: |
-          sudo chown -R coq:coq . # workaround a permission issue
-        script: |
-          startGroup Build
-            make -j2
-          endGroup
-        uninstall: |
-          make clean
-    - name: Revert permissions
-      # to avoid a warning at cleanup time
-      if: ${{ always() }}
-      run: sudo chown -R 1001:116 .
+      - uses: actions/checkout@v3
+      - uses: coq-community/docker-coq-action@v1
+        with:
+          opam_file: 'clutch.opam'
+          coq_version: ${{ matrix.coq_version }}
+          ocaml_version: ${{ matrix.ocaml_version }}
+          before_script: |
+            sudo chown -R coq:coq . # workaround a permission issue
+          script: |
+            startGroup Build
+              make ci -j2
+            endGroup
+          uninstall: |
+            make clean
+      - name: Revert permissions
+        # to avoid a warning at cleanup time
+        if: ${{ always() }}
+        run: sudo chown -R 1001:116 .
