--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
             sudo chown -R coq:coq . # workaround a permission issue
           script: |
             startGroup Build
-              make ci -j2
+              make -j2
             endGroup
           uninstall: |
             make clean
