add last working mathcomp-analysis dependency

--- a/clutch.opam
+++ b/clutch.opam
@@ -21,4 +21,5 @@ depends: [
   "coq-autosubst" { (= "1.8") | (= "dev") }
   "coq-mathcomp-ssreflect" { (= "1.17.0") }
   "coq-mathcomp-solvable" { (= "1.17.0") }
+  "coq-mathcomp-analysis" { (= "0.7.0") }
 ]
