--- a/clutch.opam
+++ b/clutch.opam
@@ -19,8 +19,8 @@ depends: [
   "coq" { (>= "8.18" & < "8.20~") | (= "dev") }
   "coq-iris" { (= "4.2.0") | (= "dev") }
   "coq-stdpp" { (= "1.10.0") | (= "dev") }
-  "coq-coquelicot" { (>= "3.2.0" & <= "3.4.0") }
+  "coq-coquelicot" { (= "3.4.1") }
   "coq-autosubst" { (= "1.8") | (= "dev") }
-  "coq-mathcomp-ssreflect" { (= "1.17.0") }
-  "coq-mathcomp-solvable" { (= "1.17.0") }
+  "coq-mathcomp-ssreflect" { (= "2.2.0") }
+  "coq-mathcomp-solvable" { (= "2.2.0") }
 ]
