--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,14 @@ jobs:
           opam_file: 'clutch.opam'
           coq_version: ${{ matrix.coq_version }}
           ocaml_version: ${{ matrix.ocaml_version }}
+          install : |
+            startGroup "Install dependencies"
+              sudo apt-get update -y -q
+              opam repo add iris-dev https://gitlab.mpi-sws.org/iris/opam.git
+              opam pin add -n -y -k path $PACKAGE $WORKDIR
+              opam update -y
+              opam install --confirm-level=unsafe-yes -j 2 $PACKAGE --deps-only
+            endGroup
           before_script: |
             sudo chown -R coq:coq . # workaround a permission issue
           script: |
