--- a/clutch.opam
+++ b/clutch.opam
@@ -1,10 +1,12 @@
 opam-version: "2.0"
 name: "coq-clutch"
-synopsis: "A higher-order probabilistic relational separation logic"
-maintainer: "Simon Oddershede Gregersen <gregersen@cs.au.dk>"
+synopsis: "Higher-order probabilistic separation logics"
+maintainer: "Simon Oddershede Gregersen <s.gregersen@nyu.edu>"
 authors: "Simon Oddershede Gregersen,
           Alejandro Aguirre,
           Philipp G. Haselwarter,
+          Kwing Hei Li,
+          Markus de Medeiros,
           Joseph Tassarotti,
           Lars Birkedal"
 license: "MIT"
@@ -14,11 +16,11 @@ bug-reports: "https://github.com/logsem/clutch/issues"
 build: [make "-j%{jobs}%"]
 install: []
 depends: [
-  "coq" { (>= "8.18" & < "8.19~") | (= "dev") }
-  "coq-coquelicot" { (>= "3.2.0" & <= "3.4.0") }
-  "coq-iris" { (= "4.1.0") | (= "dev") }
-  "coq-stdpp" { (= "1.9.0") | (= "dev") }
+  "coq" { (>= "8.18" & < "8.20~") | (= "dev") }
+  "coq-iris" { (= "4.2.0") | (= "dev") }
+  "coq-stdpp" { (= "1.10.0") | (= "dev") }
+  "coq-coquelicot" { (= "3.4.1") }
   "coq-autosubst" { (= "1.8") | (= "dev") }
-  "coq-mathcomp-ssreflect" { (= "1.17.0") }
-  "coq-mathcomp-solvable" { (= "1.17.0") }
+  "coq-mathcomp-ssreflect" { (= "2.2.0") }
+  "coq-mathcomp-solvable" { (= "2.2.0") }
 ]
