--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        coq_version:
-          - '8.19.1'
-        ocaml_version:
-          - '4.14.1-flambda'
+        image:
+          - mathcomp/mathcomp:latest-coq-8.19
       max-parallel: 4
       # don't cancel all in-progress jobs if one matrix job fails:
       fail-fast: false
@@ -26,8 +24,7 @@ jobs:
       - uses: coq-community/docker-coq-action@v1
         with:
           opam_file: 'clutch.opam'
-          coq_version: ${{ matrix.coq_version }}
-          ocaml_version: ${{ matrix.ocaml_version }}
+          custom_image: ${{ matrix.image }}
           install : |
             startGroup "Install dependencies"
               sudo apt-get update -y -q
