--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
               opam repo add iris-dev https://gitlab.mpi-sws.org/iris/opam.git
               opam pin add -n -y -k path $PACKAGE $WORKDIR
               opam update -y
+              opam reinstall --forget-pending --yes
               opam install --confirm-level=unsafe-yes -j 2 $PACKAGE --deps-only
             endGroup
           before_script: |
