--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: coq-community/docker-coq-action@v1
         with:
-          opam_file: 'clutch.opam'
+          opam_file: 'eris.opam'
           custom_image: ${{ matrix.image }}
           install : |
             startGroup "Install dependencies"
