delete more and rename clutch -> tachis

--- a/tachis.opam
+++ b/tachis.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-name: "coq-clutch"
+name: "coq-tachis"
 synopsis: "Higher-order probabilistic separation logics"
 maintainer: "Simon Oddershede Gregersen <s.gregersen@nyu.edu>"
 authors: "Simon Oddershede Gregersen,
@@ -20,7 +20,5 @@ depends: [
   "coq-iris" { (= "4.2.0") | (= "dev") }
   "coq-stdpp" { (= "1.10.0") | (= "dev") }
   "coq-coquelicot" { (= "3.4.1") }
-  "coq-autosubst" { (= "1.8") | (= "dev") }
   "coq-mathcomp-ssreflect" { (= "2.2.0") }
-  "coq-mathcomp-solvable" { (= "2.2.0") }
 ]
