--- a/coneris.opam
+++ b/coneris.opam
@@ -1,18 +1,14 @@
 opam-version: "2.0"
-name: "coq-clutch"
-synopsis: "Higher-order probabilistic separation logics"
-maintainer: "Simon Oddershede Gregersen <s.gregersen@nyu.edu>"
-authors: "Simon Oddershede Gregersen,
+name: "coq-coneris"
+synopsis: "Coneris"
+maintainer: "Kwing Hei Li"
+authors: "Kwing Hei Li,
           Alejandro Aguirre,
+	  Simon Oddershede Gregersen,
           Philipp G. Haselwarter,
-          Kwing Hei Li,
-          Markus de Medeiros,
           Joseph Tassarotti,
           Lars Birkedal"
 license: "MIT"
-homepage: "https://github.com/logsem/clutch"
-dev-repo: "git+https://github.com:logsem/clutch.git"
-bug-reports: "https://github.com/logsem/clutch/issues"
 build: [make "-j%{jobs}%"]
 install: []
 depends: [
