--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
           install : |
             startGroup "Install dependencies"
               sudo apt-get update -y -q
+              opam repo remove coq-released
+              opam repo add rocq-released https://rocq-prover.org/opam/released
               opam repo add iris-dev https://gitlab.mpi-sws.org/iris/opam.git
               opam pin add -n -y -k path $PACKAGE $WORKDIR
               opam update -y
