--- a/clutch.opam
+++ b/clutch.opam
@@ -23,5 +23,6 @@ depends: [
   "coq-autosubst" { (= "1.8") | (= "dev") }
   "coq-mathcomp-ssreflect" { (= "2.2.0") }
   "coq-mathcomp-solvable" { (= "2.2.0") }
-  "coq-mathcomp-analysis" { (= "1.4.0") }
+  "coq-mathcomp-analysis" { (= "1.10.0") }
+  "coq-mathcomp-reals-stdlib" { (= "1.10.0")}
 ]
