--- a/clutch.opam
+++ b/clutch.opam
@@ -21,6 +21,7 @@ depends: [
   "coq-stdpp" { (= "1.10.0") | (= "dev") }
   "coq-coquelicot" { (= "3.4.1") }
   "coq-autosubst" { (= "1.8") | (= "dev") }
+  "coq-graph-theory" { (= "0.9.6") | (= "dev") }
   "coq-mathcomp-ssreflect" { (= "2.2.0") }
   "coq-mathcomp-solvable" { (= "2.2.0") }
   "coq-mathcomp-analysis" { (= "1.4.0") }
