--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,13 @@ jobs:
         ocaml_version:
           - '4.14.1-flambda'
       max-parallel: 4
-      # don't cancel all in-progress jobs if one matrix job fails:
       fail-fast: false
 
     steps:
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - uses: actions/checkout@v3
       - uses: coq-community/docker-coq-action@v1
         with:
@@ -36,7 +39,25 @@ jobs:
             endGroup
           uninstall: |
             make clean
+      - name: coqdocJS
+        run: |
+          make coqdoc -j2
       - name: Revert permissions
-        # to avoid a warning at cleanup time
         if: ${{ always() }}
         run: sudo chown -R 1001:116 .
+      - name: Upload HTML docs
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: html
+
+  deploy:
+    if: github.ref == 'refs/heads/main'
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v2
