--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,14 @@ jobs:
           before_script: |
             sudo chown -R coq:coq . # workaround a permission issue
           script: |
+            startGroup Clone coqdocjs
+              git clone https://github.com/ahuoguo/coqdocjs.git
+            endGroup
             startGroup Build
               make -j2
+            endGroup
+            startGroup HTML Build
+              make -f Makefile.ci -j2
             endGroup
           uninstall: |
             make clean
@@ -48,3 +54,21 @@ jobs:
         # to avoid a warning at cleanup time
         if: ${{ always() }}
         run: sudo chown -R 1001:116 .
+      - name: Upload html as artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: html
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    runs-on: ubuntu-latest
+    steps:
+      - name: deploy to github pages
+        id: deployment
+        uses: actions/deploy-pages@v4
