--- a/clutch.opam
+++ b/clutch.opam
@@ -1,18 +1,12 @@
 opam-version: "2.0"
-name: "coq-clutch"
-synopsis: "Higher-order probabilistic separation logics"
-maintainer: "Simon Oddershede Gregersen <s.gregersen@nyu.edu>"
-authors: "Simon Oddershede Gregersen,
-          Alejandro Aguirre,
-          Philipp G. Haselwarter,
-          Kwing Hei Li,
-          Markus de Medeiros,
-          Joseph Tassarotti,
-          Lars Birkedal"
+name: "coq-clutch-dp"
+synopsis: "Differential Privacy in Probabilistic Higher-Order Separation Logic"
+maintainer: "<anonymized>"
+authors: "Anonymized"
 license: "MIT"
-homepage: "https://github.com/logsem/clutch"
-dev-repo: "git+https://github.com:logsem/clutch.git"
-bug-reports: "https://github.com/logsem/clutch/issues"
+homepage: ""
+dev-repo: ""
+bug-reports: ""
 build: [make "-j%{jobs}%"]
 install: []
 depends: [
