Revert "drop explicit elpi dep". Maybe drop it once we use Rocq 9 etc.
This reverts commit ca9fa9299a940ce8cc71e3e2159911a64c0c017f.

--- a/coq-clutch.opam
+++ b/coq-clutch.opam
@@ -27,6 +27,8 @@ depends: [
   "coq-mathcomp-ssreflect" {= "2.2.0"}
   "coq-mathcomp-solvable" {= "2.2.0"}
   "coq-mathcomp-analysis" {= "1.4.0"}
+  "coq-elpi" {= "2.1.1"}
+  "elpi" {= "1.18.2"}
   "odoc" {with-doc}
 ]
 build: [
