--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: coq-community/docker-coq-action@v1
         with:
-          opam_file: 'clutch.opam'
+          opam_file: 'coq-clutch.opam'
           custom_image: ${{ matrix.image }}
           install : |
             startGroup "Install dependencies"
@@ -31,6 +31,7 @@ jobs:
               opam repo remove coq-released
               opam repo add rocq-released https://rocq-prover.org/opam/released
               opam repo add iris-dev https://gitlab.mpi-sws.org/iris/opam.git
+              opam unpin -n dune
               opam pin add -n -y -k path $PACKAGE $WORKDIR
               opam update -y
               opam reinstall --forget-pending --yes
@@ -40,13 +41,13 @@ jobs:
             sudo chown -R coq:coq . # workaround a permission issue
           script: |
             startGroup Build
-              make -j2
+              dune build
             endGroup
             startGroup HTML Build
               make -f Makefile.ci -j2
             endGroup
           uninstall: |
-            make clean
+            dune clean
       - name: Revert permissions
         # to avoid a warning at cleanup time
         if: ${{ always() }}
