--- a/clutch.opam
+++ b/clutch.opam
@@ -16,13 +16,14 @@ bug-reports: "https://github.com/logsem/clutch/issues"
 build: [make "-j%{jobs}%"]
 install: []
 depends: [
-  "coq" { (>= "8.19" & < "8.20~") | (= "dev") }
-  "coq-iris" { (= "4.2.0") | (= "dev") }
-  "coq-stdpp" { (= "1.10.0") | (= "dev") }
-  "coq-coquelicot" { (= "3.4.1") }
-  "coq-autosubst" { (= "1.8") | (= "dev") }
-  "coq-hierarchy-builder" { (= "1.8.1") }
-  "coq-mathcomp-ssreflect" { (= "2.2.0") }
-  "coq-mathcomp-solvable" { (= "2.2.0") }
-  "coq-mathcomp-analysis" { (= "1.4.0") }
+  "rocq-core" { (>= "9.0.0" & < "9.1~") | (= "dev") }
+  "rocq-stdlib" { (>= "9.0.0" & < "9.1~") | (= "dev") }
+  "coq-iris" { (= "4.4.0") | (= "dev") }
+  "coq-stdpp" { (= "1.12.0") | (= "dev") }
+  "coq-coquelicot" { (= "3.4.4") }
+  "coq-autosubst" { (= "1.9") | (= "dev") }
+  "coq-hierarchy-builder" { (= "1.10.1") }
+  "coq-mathcomp-ssreflect" { (= "2.5.0") }
+  "coq-mathcomp-solvable" { (= "2.5.0") }
+  "coq-mathcomp-analysis" { (= "1.14.0") }
 ]
