--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         image:
-          - mathcomp/mathcomp:2.4.0-rocq-prover-9.0
+          - mathcomp/mathcomp:2.5.0-rocq-prover-9.0
       max-parallel: 4
       # don't cancel all in-progress jobs if one matrix job fails:
       fail-fast: false
@@ -34,7 +34,7 @@ jobs:
               opam install --confirm-level=unsafe-yes -j 2 $PACKAGE --deps-only
             endGroup
           before_script: |
-            sudo chown -R coq:coq . # workaround a permission issue
+            sudo chown -R rocq:rocq . # workaround a permission issue
           script: |
             startGroup Build
               make -j2
