--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: coq-community/docker-coq-action@v1
         with:
-          opam_file: 'clutch.opam'
+          opam_file: 'rocq-clutch.opam'
           custom_image: ${{ matrix.image }}
           install : |
             startGroup "Install dependencies"
@@ -37,13 +37,13 @@ jobs:
             sudo chown -R rocq:rocq . # workaround a permission issue
           script: |
             startGroup Build
-              make -j2
+              dune build -j 2
             endGroup
             startGroup HTML Build
               make -f Makefile.ci -j2
             endGroup
           uninstall: |
-            make clean
+            dune clean
       - name: Revert permissions
         # to avoid a warning at cleanup time
         if: ${{ always() }}
