--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,7 @@ jobs:
               opam pin add -n -y -k path $PACKAGE $WORKDIR
               opam update -y
               opam reinstall --forget-pending --yes
-              opam install --confirm-level=unsafe-yes -j 2 $PACKAGE --deps-only
-              opam install odoc
+              opam install --confirm-level=unsafe-yes -j 2 $PACKAGE --deps-only --with-doc
             endGroup
           before_script: |
             sudo chown -R rocq:rocq . # workaround a permission issue
