silence Coquelicot warning

--- a/theories/dune
+++ b/theories/dune
@@ -21,7 +21,10 @@
    -w -convert_concl_no_check
    -w -undeclared-scope
    -w -ambiguous-paths
-   -w -ssr-search-moved)
+   -w -ssr-search-moved
+   ; only here to silence the spurious warning about Coqulicot not being found...
+   -w -module-not-found
+   )
  (coqdoc_flags
    :standard
    --toc-depth 2 --interpolate --index indexpage --no-lib-name --parse-comments
