--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
           custom_image: ${{ matrix.image }}
           install : |
             startGroup "Install dependencies"
+              opam install odoc
               # opam pin add -n -y -k path $PACKAGE $WORKDIR
               # opam update -y
               # opam reinstall --forget-pending --yes
